# JOB-20260702144531-000128

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  COVER_LETTER.txt  Dockerfile  OUT_OF_SCOPE.md  PROPOSAL.md  README.md  SPEC.md  _send_hb.py  alembic.ini  azure_skills_audit.md  docker-compose.yml  gsd-execute-plan.py  hello.py  monitor_build.sh  package.json  patch_stage2.py  pyproject.toml  requirements.txt  run_pipeline.py  run_pipeline.sh  tg_bot.py  tg_health.py  upload-lead.ps1  upload-opportunities.ps1
.github/workflows/: ci.yml
.planning/: .phase_status.json  CONTEXT.md  JOB-128-BUILD-STATUS.md  JOB-128-REWORK-followup.md  REQUIREMENTS.md  RESEARCH.md  ROADMAP.md  STATE.md
alembic/: env.py
alembic/versions/: 001_initial.py
api/: main.py
api/models/: schemas.py
api/routers/: health.py  ingest.py
api/services/: bigquery.py  (+1 more)
app/: __init__.py  config.py  database.py  dependencies.py  main.py
dags/: etl_pipeline.py
deploy-notes/: 2026-06-30-telegram-409-fix.md  2026-07-03-job128-investigation.md
kafka-sprint/: .env.example  DEPLOYMENT.md  KAFKA_SPRINT_PLAN.md  RUNBOOK.md  docker-compose.local.yml  docker-compose.prod.yml
lib/: config.py
readmes/: JOB-20260418033037-8ceda7.md  JOB-20260419060057-b0fd0b.md  JOB-20260419060057-e3b495.md  JOB-20260419060058-aff7de.md  JOB-20260420033053-a97ad3.md  JOB-20260420033054-040352.md  JOB-20260420113032-04cbb3.md  JOB-20260420153040-c76b4d.md
scripts/: __init__.py  seed_dev.py  start_workers.sh  verify_stack.py
src/: __init__.py  __main__.py  config.py  database.py  main.py
superset-sprint/: .env.example  DAYS.md  README.md  SUPERSET_SPRINT_PLAN.md  docker-compose.prod.yml  docker-compose.yml
tests/: conftest.py  test_api.py  test_bigquery.py  test_etl.py  test_orchestrator.py  test_out_of_scope_doc.py  test_project_structure.py  test_stack_imports.py
(+173 files in other folders)
